--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Last Week - Find Out Your Friends' Top Artists!</title>
-    <link rel="stylesheet" href="css/application.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
   <body>
