--- a/index.html
+++ b/index.html
@@ -3,47 +3,48 @@
     <title>Last Week - Find Out Your Friends' Top Artists!</title>
     <link rel="stylesheet" href="/assets/css/app.css" type="text/css" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  </head>
-  <body>
     <script src="js/new-jquery-2.1.3.min.js"></script>
     <script src="js/application.js"></script>
     <!--<script src="js/imtech_pager.js"></script>-->
-    <header>
-      <form>
-        <input class="br-circ" id="textbox" type="text" placeholder="Enter last.fm username" onkeydown="if(event.keyCode==13)$('#button').trigger('click');"/>
-          <a class="btn btn--s" id="button">
-            <input type="submit" value="Go" />
-          </a>
-      </form>
-    </header>
-    <div class="title">
-      <h1>L<span class="red"><i class="fa fa-lastfm"></i></span>t Week</h1>
-      <h5>See your friends' favorite artists on one page.
-        <br>Find what you have in common. Be judgy. Discover new music.</h5>
-    </div>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <form>
+          <input class="br-circ" id="textbox" type="text" placeholder="Enter last.fm username" onkeydown="if(event.keyCode==13)$('#button').trigger('click');"/>
+            <a class="btn btn--s" id="button">
+              <input type="submit" value="Go" />
+            </a>
+        </form>
+      </header>
+      <div class="title">
+        <h1>L<span class="red"><i class="fa fa-lastfm"></i></span>t Week</h1>
+        <h5>See your friends' favorite artists on one page.
+          <br>Find what you have in common. Be judgy. Discover new music.</h5>
+      </div>
     
-    <br>
-    <div id="content">
-      <table>
-        <tr>
-          <td id="success">
-          </td>
-        </tr>
-      </table>
+      <div id="content">
+        <table>
+          <tr>
+            <td id="success">
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div id="pagingControls"></div>
+      <div id="error"></div>
+      <div class="bottom">
+        <br>Powered by the <a href="http://www.last.fm/api">Last.fm API</a>.
+      </div>
+      <script type="text/javascript">
+      var pager = new Imtech.Pager();
+      $(document).ready(function() {
+        pager.paragraphsPerPage = 5; // set amount elements per page
+        pager.pagingContainer = $('#content'); // set of main container
+        pager.paragraphs = $('#success', pager.pagingContainer); // set of required containers
+        pager.showPage(1);
+      });
+      </script>
     </div>
-    <div id="pagingControls"></div>
-    <div id="error"></div>
-    <div class="bottom">
-      <br>Powered by the <a href="http://www.last.fm/api">Last.fm API</a>.
-    </div>
-    <script type="text/javascript">
-    var pager = new Imtech.Pager();
-    $(document).ready(function() {
-      pager.paragraphsPerPage = 5; // set amount elements per page
-      pager.pagingContainer = $('#content'); // set of main container
-      pager.paragraphs = $('#success', pager.pagingContainer); // set of required containers
-      pager.showPage(1);
-    });
-    </script>
   </body>
 </html>
