--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--<script src="js/imtech_pager.js"></script>-->
   </head>
   <body>
-    <div class="container">
+    <div class="container mw-75-ns">
       <header>
         <form>
           <input class="br-circ" id="textbox" type="text" placeholder="Enter last.fm username" onkeydown="if(event.keyCode==13)$('#button').trigger('click');"/>
