displays users real name when hovering over their username

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
       </p>
     </div>
     <br>
-    <table>
-      <tr>
-        <td>
-          <ul id="itemContainer">
-            <li id="success">
-            </li>
-          </ul>
-        </td>
-      </tr>
-    </table>
+    <div class="wrapper">
+      <table>
+        <tr>
+          <td>
+            <ul id="itemContainer">
+              <li id="success">
+              </li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </div>
     <script type="text/javascript">
       $(document).ready(function () {
         $(document).on('click', '.fa-lastfm-square', function(event) {
