--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Last Week - Find Out Your Friends' Top Artists!</title>
     <link rel="stylesheet" href="css/application.css" type="text/css" />
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/jPages.css">
+    <script src="js/jPages.js"></script>
     <script src="js/new-jquery-2.1.3.min.js"></script>
     <script src="js/application.js"></script>
   </head>
@@ -20,7 +22,7 @@
         <tr>
           <td>
             <div class="form">
-              <input id="textbox" type="text" autofocus="autofocus" placeholder="Enter your last.fm username here" style="width: 185px;" onkeydown="if(event.keyCode===13)$('#button').trigger('click');" onfocus="this.value='';"/>
+              <input id="textbox" type="text" autofocus="autofocus" placeholder="Enter Last.fm username here" style="width: 185px;" onkeydown="if(event.keyCode===13)$('#button').trigger('click');" onfocus="this.value='';"/>
               <span id="button">
                 <input type="submit" value="Search" id="submit-user"/>
               </span>
