updated explaination copy at the bottom of the page to reflect improved search featureset

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div id="error"></div>
     <div class="bottom">
-      (Click on the Last.fm icon next to a username to copy it into the search field.)
+      (Click on the Last.fm icon next to a username to search for that user's friends.)
       <br><br>Powered by the <a href="http://www.last.fm/api">Last.fm API</a>.
     </div>
   </body>
