results section html cleanup

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
     <br>
     <div class="wrapper">
       <table>
-        <tr>
-          <td>
-            <ul id="itemContainer">
-              <li id="success">
-              </li>
-            </ul>
-          </td>
-        </tr>
+        <tbody>
+          <tr>
+            <td>
+              <ul>
+                <li id="success">
+                </li>
+              </ul>
+            </td>
+          </tr>
+        </tbody>
       </table>
     </div>
     <div id="error"></div>
