added buttons to toggle between stylesheets (currently commented out)

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
     <div class="bottom">
       (Click on the Last.fm icon next to a username to search for that user's friends.)
       <br><br>Powered by the <a href="http://www.last.fm/api">Last.fm API</a>.
+      <!--
+      <br><br>
+      <button id="minimalist">Minimalist</button>
+      <button id="newfangled">Newfangled</button>
+      -->
     </div>
   </body>
 </html>
