--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Last Week - Find Out Your Friends' Top Artists!</title>
     <link rel="stylesheet" href="css/application.css" type="text/css" />
+    <link rel="stylesheet" href="css/new.css" type="text/css" />
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script src="js/new-jquery-2.1.3.min.js"></script>
     <script src="js/application.js"></script>
