removed unused error div, replaced <br> tags with styled divs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="title">
       <h1>L<span class="red"><i class="fa fa-lastfm"></i></span>t Week</h1>
       <h5>See your friends' favorite artists on one page.
-        <br>Find what you have in common. Be judgy. Discover new music.</h5>
+        <div>Find what you have in common. Be judgy. Discover new music.
+        </div>
+      </h5>
     </div>
     <div class="above-main">
       <div class="form">
@@ -36,12 +38,10 @@
         </tbody>
       </table>
     </div>
-    <div id="error"></div>
     <div class="bottom">
       (Click on the Last.fm icon next to a username to search for that user's friends.)
-      <br><br>Powered by the <a href="http://www.last.fm/api">Last.fm API</a>.
+      <div id="powered-by">Powered by the <a href="http://www.last.fm/api">Last.fm API</a>.</div>
       <!--
-      <br><br>
       <button id="minimalist">Minimalist</button>
       <button id="newfangled">Newfangled</button>
       -->
