some edits to index.html in hopes of getting gulp deploy to work properly

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <html>
   <head>
     <title>Last Week - Find Out Your Friends' Top Artists!</title>
+
+    <!-- build:css /css/site.css -->
     <link rel="stylesheet" href="/assets/css/app.css" type="text/css" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <!-- endbuild -->
+
+    <!-- build:js /js/site.js -->
     <script src="js/new-jquery-2.1.3.min.js"></script>
     <script src="js/application.js"></script>
+    <!-- endbuild -->
+
   </head>
+
   <body>
+
     <div class="container mw-75-ns">
       <header>
         <form>
@@ -16,6 +25,7 @@
           </a>
         </form>
       </header>
+
       <div class="title">
         <h1>L<span class="red"><i class="fa fa-lastfm"></i></span>t Week</h1>
         <h5>See your friends' favorite artists on one page.
@@ -29,10 +39,12 @@
           </tr>
         </table>
       </div>
+
       <div class="bottom">
         <br>(Click on the Last.fm icon next to a username to search for that user's friends.)
         <br>Powered by the <a href="http://www.last.fm/api">Last.fm API</a>.
       </div>
+
     </div>
   </body>
 </html>
