remove / from app.css path
should allow for finding of the css file now

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Last Week - Find Out Your Friends' Top Artists!</title>
 
     <!-- build:css /css/site.css -->
-    <link rel="stylesheet" href="/assets/css/app.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- endbuild -->
 
